--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
             class="fa fa-facebook"></i></a>
       </div>
       <div class="social-links float-right d-none d-lg-block d-md-block">
-        <a href="#" class="linkedin"><img width="20px" src="img/USA.svg" alt="" title="" /></a>
-        <a href="#" class="facebook"><img width="20px" src="img/mexico.png" alt="" title="" /></i></a>
+        <p>
+          <a class="btn btn-default lang_selector trn" href="#" role="button" data-value="en">translate to English</a>
+          <a class="btn btn-default lang_selector trn" href="#" role="button"  data-value="es">translate to Spanish</a>
+        </p>
       </div>
     </div>
   </section>
@@ -83,10 +85,10 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="#body">Home</a></li>
-          <li><a href="#about">About Us</a></li>
-          <li><a href="#portfolio"> Products & Services</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li class="menu-active"><a href="#body" class="trn">Home</a></li>
+          <li><a href="#about" class="trn">About Us</a></li>
+          <li><a href="#portfolio" class="trn"> Products & Services</a></li>
+          <li><a href="#contact" class="trn">Contact</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -98,10 +100,10 @@
   <section id="intro">
 
     <div class="intro-content">
-      <h2><strong>JARKOL TECHNOLOGIES</strong></h2>
+      <h2 class="trn"><strong>JARKOL TECHNOLOGIES</strong></h2>
 
       <div>
-        <a href="#about" class="btn-get-started scrollto"><small><strong>TECHNOLOGY & ENGINEERING SERVICES</strong></small></a>
+        <a href="#about" class="btn-get-started scrollto"><small class="trn"><strong>TECHNOLOGY & ENGINEERING SERVICES</strong></small></a>
       </div>
     </div>
 
@@ -128,15 +130,15 @@
           </div>
 
           <div class="col-lg-6 content">
-            <h2>Our Products and Services</h2>
-            <h4>Experts in horizontal well logging.</h4>
+            <h2 class="trn">Our Products and Services</h2>
+            <h4 class="trn">Experts in horizontal well logging.</h4>
             <ul>
-              <li><i class="ion-android-checkmark-circle"></i> <strong>Geothermal</strong>
+              <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Geothermal</strong>
               </li>
-              <li><i class="ion-android-checkmark-circle"></i> <strong>Downhole Monitoring Systems</strong></li>
-              <li><i class="ion-android-checkmark-circle"></i> <strong>Directional Drilling and Logging Tools</strong>
+              <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Downhole Monitoring Systems</strong></li>
+              <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Directional Drilling and Logging Tools</strong>
               </li>
-              <li><i class="ion-android-checkmark-circle"></i> <strong>Technical Consultancy</strong></li>
+              <li><i class="ion-android-checkmark-circle"></i> <strong class="trn">Technical Consultancy</strong></li>
 
 
 
@@ -158,19 +160,16 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
-            <h2 class="cta-title">About Us</h2>
-            <p class="cta-text">From tackling personal decisions to reaching important milestones, our job is to guide
-              you on the path of
-              success. As professional Engineering Consultants, we guarantee great results.</p>
-            <p class="cta-text">We are a service company for the Energy and Extraction Industry, with direct experience
-              in Oil and Gas,
-              Mining and Geothermal, particularly in drilling operations, geophysical logging with both wireline and
-              while
-              drilling tools and production parameters monitoring, focused on the introduction of new, better and more
+            <h2 class="cta-title trn">About Us</h2>
+            <p class="cta-text trn">From tackling personal decisions to reaching important milestones, our job is to guide
+              you on the path of success. As professional Engineering Consultants, we guarantee great results.</p>
+            <p class="cta-text trn">We are a service company for the Energy and Extraction Industry, with direct experience
+              in Oil and Gas, Mining and Geothermal, particularly in drilling operations, geophysical logging with both wireline and
+              while drilling tools and production parameters monitoring, focused on the introduction of new, better and more
               accesible technologies in the Latin American market.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#contact">Get in Touch</a>
+            <a class="cta-btn align-middle trn" href="#contact">Get in Touch</a>
           </div>
         </div>
 
@@ -186,16 +185,16 @@
           <div class="col-lg-6">
             <div class="box wow fadeInRight">
               <div class="icon"><i class="fa fa-cogs"></i></div>
-              <h4 class="title"><a href="">Mission</a></h4>
-              <p class="description">To provide, Import and develop technology for the Oil and Gas, Geothermal and Mining industry in the
+              <h4 class="title"><a href="" class="trn">Mission</a></h4>
+              <p class="description trn">To provide, Import and develop technology for the Oil and Gas, Geothermal and Mining industry in the
                 Mexican Market in order to promote and boost competitiveness.</p>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-eye"></i></div>
-              <h4 class="title"><a href="">Vission</a></h4>
-              <p class="description">​To become one of the leading Mexican companies boosting the development of
+              <h4 class="title"><a href="" class="trn">Vission</a></h4>
+              <p class="description trn">​To become one of the leading Mexican companies boosting the development of
                 technology and strategical tools for the Energy Industry in Mexico and Latin America.</p>
             </div>
           </div>
@@ -211,9 +210,9 @@
     <section id="clients" class="wow fadeInUp">
       <div class="container">
         <div class="section-header">
-          <h2>Clients</h2>
+          <h2 class="trn">Clients</h2>
           <h3></h3>
-          <p>We work with several companies from around the world in the Energy industry on complex matters, focused on
+          <p class="trn">We work with several companies from around the world in the Energy industry on complex matters, focused on
             Geothermal and Oil and Gas projects. After a few sessions with us, our clients have been able to get back on
             track and experience the long lasting impacts of our services.</p>
         </div>
@@ -232,9 +231,9 @@
     <section id="portfolio" class="wow fadeInUp">
       <div class="container">
         <div class="section-header">
-          <h2>Products & Services</h2>
-          <h3>The Cutting Edge</h3>
-          <p>We offer a variety of services to all of our clients, customized to fit their specific needs. Are you a
+          <h2 class="trn">Products & Services</h2>
+          <h3 class="trn">The Cutting Edge</h3>
+          <p class="trn">We offer a variety of services to all of our clients, customized to fit their specific needs. Are you a
             large corporation looking for a step-by-step plan of action? Or, are you are a small startup just beginning
             your business? No matter what your needs are, Jarkol Technologies is here to provide you guidance every step
             of the way. Take a look below to see what we can do for you.</p>
@@ -250,20 +249,20 @@
                 <img src="img/portfolio/1.jpg" alt="">
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
-                    <h2 class="wow fadeInUp">Geothermal</h2>
+                    <h2 class="wow fadeInUp trn">Geothermal</h2>
                   </div>
                 </div>
               </a>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4">
+          <div class="col-lg-3<script src="js/bootstrap.min.js"></script> col-md-4">
             <div class="portfolio-item wow fadeInUp">
               <a href="img/portfolio/2.jpg" class="portfolio-popup">
                 <img src="img/portfolio/2.jpg" alt="">
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
-                    <h2 class="wow fadeInUp">Downhole Monitoring Systems</h2>
+                    <h2 class="wow fadeInUp trn">Downhole Monitoring Systems</h2>
                   </div>
                 </div>
               </a>
@@ -276,7 +275,7 @@
                 <img src="img/portfolio/3.jpg" alt="">
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
-                    <h2 class="wow fadeInUp">Directional Drilling and Logging Tools</h2>
+                    <h2 class="wow fadeInUp trn">Directional Drilling and Logging Tools</h2>
                   </div>
                 </div>
               </a>
@@ -289,7 +288,7 @@
                 <img src="img/portfolio/4.jpg" alt="">
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
-                    <h2 class="wow fadeInUp">Technical Consulting</h2>
+                    <h2 class="wow fadeInUp trn">Technical Consulting</h2>
                   </div>
                 </div>
               </a>
@@ -302,7 +301,7 @@
                 <img src="img/portfolio/5.jpg" alt="">
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
-                    <h2 class="wow fadeInUp">Drilling Engineering</h2>
+                    <h2 class="wow fadeInUp trn">Drilling Engineering</h2>
                   </div>
                 </div>
               </a>
@@ -315,7 +314,7 @@
                 <img src="img/portfolio/6.jpg" alt="">
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
-                    <h2 class="wow fadeInUp">Portfolio Item 6</h2>
+                    <h2 class="wow fadeInUp trn">Portfolio Item 6</h2>
                   </div>
                 </div>
               </a>
@@ -328,7 +327,7 @@
                 <img src="img/portfolio/7.jpg" alt="">
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
-                    <h2 class="wow fadeInUp">Portfolio Item 7</h2>
+                    <h2 class="wow fadeInUp trn">Portfolio Item 7</h2>
                   </div>
                 </div>
               </a>
@@ -341,7 +340,7 @@
                 <img src="img/portfolio/8.jpg" alt="">
                 <div class="portfolio-overlay">
                   <div class="portfolio-info">
-                    <h2 class="wow fadeInUp">Portfolio Item 8</h2>
+                    <h2 class="wow fadeInUp trn">Portfolio Item 8</h2>
                   </div>
                 </div>
               </a>
@@ -530,14 +529,13 @@
           <div class="col-xs-12 col-sm-12 col-md-6">
             <div class="container">
               <div class="section-header">
-                <h2>Contact Us</h2>
-                <p>Do you have a particular challenge you are currently dealing with? Contact us today and explore what
-                  we can
-                  do for you.</p>
+                <h2 class="trn">Contact Us</h2>
+                <p class="trn">Do you have a particular challenge you are currently dealing with? Contact us today and explore what
+                  we can do for you.</p>
               </div>
             </div>
             <div class="form">
-              <div id="sendmessage">Your message has been sent. Thank you!</div>
+              <div id="sendmessage" class="trn">Your message has been sent. Thank you!</div>
               <div id="errormessage"></div>
               <form action="" method="post" role="form" class="contactForm">
                 <div class="form-row">
@@ -562,7 +560,7 @@
                     data-msg="Please write something for us" placeholder="Message"></textarea>
                   <div class="validation"></div>
                 </div>
-                <div class="text-center"><button type="submit">Send Message</button></div>
+                <div class="text-center"><button type="submit" class="trn">Send Message</button></div>
               </form>
               <br>
             </div>
@@ -578,15 +576,15 @@
           <div class="col-md-4">
             <div class="contact-address">
               <i class="fa fa-map-marker"></i>
-              <h3>Address</h3>
-              <address>Villahermosa, Tabasco, México</address>
+              <h3 class="trn">Address</h3>
+              <address class="trn">Villahermosa, Tabasco, México</address>
             </div>
           </div>
           <a class="facebook"></a>
           <div class="col-md-4">
             <div class="contact-phone">
               <i class="fa fa-facebook"></i>
-              <h3>Follow Us</h3>
+              <h3 class="trn">Follow Us</h3>
               <p><a href="https://www.facebook.com/Jarkol-Technologies-116224989010437/">Jarkol Technologies SA de
                   CV</a></p>
             </div>
@@ -595,7 +593,7 @@
           <div class="col-md-4">
             <div class="contact-email">
               <i class="fa fa-envelope-o"></i>
-              <h3>Contact Us</h3>
+              <h3 class="trn">Contact Us</h3>
               <p><a href="mailto:sales@jarkol.com"> sales@jarkol.com
                 </a></p>
             </div>
@@ -624,6 +622,10 @@
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
   <!-- JavaScript Libraries -->
+  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="translatejs/jquery.translate.js"></script>
+  <script src="translatejs/main.js"></script>
+  <script src="translatejs/js/bootstrap.min.js"></script>
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -640,7 +642,7 @@
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
-
+   
 </body>
 
 </html>
